--- a/client/.vscode/settings.json
+++ b/client/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "typescript.tsdk": "node_modules/typescript/lib"
+    "typescript.tsdk": "node_modules/typescript/lib",
+    "window.zoomLevel": 3,
+    "editor.tabSize": 2,
 }
