--- a/client/.vscode/settings.json
+++ b/client/.vscode/settings.json
@@ -2,4 +2,5 @@
     "typescript.tsdk": "node_modules/typescript/lib",
     "window.zoomLevel": 3,
     "editor.tabSize": 2,
+    "editor.formatOnSave": false,
 }
