fetch data from API

--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -24,6 +24,7 @@
         "prettier"
     ],
     "rules": {
+        "react/prop-types": 0,
         "react-hooks/rules-of-hooks": "error",
         "react-hooks/exhaustive-deps": "warn",
         "prettier/prettier": "error",
